Finish progress on per-frame LM words re-computing
Realised that the modality fusion method of 'per-frame silence/language token insertion' could be modified to be a much better option than the current 'per-frame words re-computing' method.

- re-computing words could potentially require 2048 token passes through the LM to get a single token output from VPT
+ silence insertion only requires 1 token pass through the LM to get an output from VPT
- silence insertion requires inserting silence tokens - this is destructive to language model performance due to OOD
- ^ this also reduces the effective context size
= ^ however, the problem may be reduced greatly by simply having the language model give output to VPT every d timesteps and repeating previous output until then. This decereases interaction time but language happens on slow timescales anyway so this is probably more biologically plausible, and is also remiiscent of RNN RL methods of having higher RNN layers work on larger timesteps to improve performance.
+ allows for frames to be kept up to 2048 frames in past as opposed to 128, but this might might not actually increase performance since VPT is XL-type transformer and recurrent and can probably access stuff that far back anyway, as the 2048 tokens will be noisy with langauge inputs as well.
+ greatly speeds up production time: complicated per-frame LM recomuting was going in circles, this allows getting to a point where progress in other areas can be made to get a working protoype

per_frame LM re=compute farthest back time = infinity. on average, at 150WPM = 614.4s (10.4 mins)
silence_insertion @d=1 farthest back time = 102.4s (1.7 mins)         | @150WPM: num real tokens = 341/2048    = 17%
silence_insertion @d=10 farthest back time = (1002s) (15 mins)      | @ 150WPM: num real tokens = 1716/2048 = 84%
silence_insertion @d=20 farthest back time =

--- a/VLPT/VLPT explorer.ipynb
+++ b/VLPT/VLPT explorer.ipynb
@@ -2,24 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "Nu0P9hgiNeSI",
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Open VS Code > File > Preferences > Settings. Then in the settings page look for \"notebook\". Scroll down and there\\'s the \"Notebook > Output: Text Line Limit\", which by default has value 50 but can be increased.'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/idmi/miniconda3/envs/minerl\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'os' has no attribute 'cpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mprint\u001b[39m(sys\u001b[39m.\u001b[39mexec_prefix)\n\u001b[1;32m     11\u001b[0m current_opt_dir \u001b[39m=\u001b[39m sys\u001b[39m.\u001b[39mexec_prefix \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 12\u001b[0m os\u001b[39m.\u001b[39;49mcpy(\u001b[39m'\u001b[39m\u001b[39mmodelling_opt.py\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     16\u001b[0m \u001b[39m\"\"\"Open VS Code > File > Preferences > Settings. Then in the settings page look for \"notebook\". Scroll down and there's the \"Notebook > Output: Text Line Limit\", which by default has value 50 but can be increased.\"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'os' has no attribute 'cpy'"
+     ]
     }
    ],
    "source": [
+    "import sys, os\n",
     "#os.system(\"sudo add-apt-repository ppa:openjdk-r/ppa && sudo apt-get update && sudo apt-get install openjdk-8-jdk\")\n",
     "#!pip install git+https://github.com/minerllabs/minerl@v1.0.0\n",
     "#!pip install -r \"Video-Pre-Training-main/requirements.txt\"\n",
@@ -28,6 +37,11 @@
     "#!conda install cuda-toolkit==11.3\n",
     "#!pip install transformers \n",
     "#!pip install torch\n",
+    "\n",
+    "# edit modelling_OPT file int Transformers to allow OPT models to take extra parameter to allow fedding full sized embeddings, rather than the smaller embedddings which are projected to full-size inside the model\n",
+    "current_opt_dir = sys.exec_prefix + \"/lib/python3.8/site-packages/transformers/models/opt/\"\n",
+    "os.rename(current_opt_dir+\"modelling_opt.py\", current_opt_dir+\"modelling_opt.py.bak\")\n",
+    "os.system( 'cp '+'modelling_opt.py ', +current_opt_dir+\"modelling_opt.py\")\n",
     "\n",
     "\n",
     "\n",
@@ -62,7 +76,6 @@
    "source": [
     "# imports\n",
     "import random\n",
-    "import os\n",
     "import time\n",
     "\n",
     "from argparse import ArgumentParser\n",
@@ -386,20 +399,46 @@
     "                # Action was null\n",
     "                continue\n",
     "\n",
-    "            agent_obs = agent._env_obs_to_agent({\"pov\": image})\n",
+    "            agent_obs = agent._video_obs_to_agent({\"pov\": image})\n",
+    "\n",
     "            if episode_id not in episode_hidden_states:\n",
     "                # TODO need to clean up this hidden state after worker is done with the work item.\n",
     "                #      Leaks memory, but not tooooo much at these scales (will be a problem later).\n",
     "                episode_hidden_states[episode_id] = policy.initial_state(1)\n",
     "            agent_state = episode_hidden_states[episode_id]\n",
     "            \n",
-    "            pi_distribution, v_prediction, new_agent_state = policy.get_output_for_observation(\n",
-    "                agent_obs,\n",
-    "                agent_state,\n",
-    "                dummy_first\n",
+    "            pi_distribution, v_prediction, new_agent_state, word_pd, word_v = policy.get_output_for_observations(\n",
+    "                ob_frames = agent_obs,\n",
+    "                ob_words = ob_words,\n",
+    "                VPT_state_in = agent_state,\n",
+    "                dummy_first = None\n",
     "            )\n",
     "\n",
+    "\n",
+    "            # ACTION LOSS\n",
     "            log_prob  = policy.get_logprob_of_action(pi_distribution, agent_action)\n",
+    "\n",
+    "\n",
+    "            # LANGUAGE LOSS - from modeling_opt.py\n",
+    "            logits = word_pd.contiguous()\n",
+    "            labels = th.full([word_pd.shape[0],word_pd.shape[1],1], -100, dtype=th.LongTensor) # dont compute loss for masked tokens (hence -100 token ids for masked tokens, as per OPT)\n",
+    "            for b in range(len(ob_words['input_ids'])):\n",
+    "                n_tokens = len(ob_words['input_ids'][b])\n",
+    "                labels[:n_tokens] = ob_words['input_ids']\n",
+    "            loss = None\n",
+    "            # Shift so that tokens < n predict n\n",
+    "            shift_logits = logits[..., :-1, :].contiguous()\n",
+    "            shift_labels = labels[..., 1:].contiguous()      #@ make sure to not train \n",
+    "            # Flatten the tokens\n",
+    "            loss_fct = th.nn.CrossEntropyLoss()\n",
+    "            loss = loss_fct(shift_logits.view(-1, policy.net.LM.model.decoder.vocab_size), shift_labels.view(-1))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "            # Make sure we do not try to backprop through sequence\n",
     "            # (fails with current accumulation)\n",
