OPT -> TransformerXL. IDM optimization
Switched OPT to TransformerXL after realising non-recurrent transformers would use too much compute when predicting arbitrarily large sequences.

Had to adjust TransformerXL code to not throw away [batch_size] worth of tokens when training.

Still need to figure out how data loading, batching, hidden state management and backprop should be put into a training scheme...

--- a/VLPT/run_module.ipynb
+++ b/VLPT/run_module.ipynb
@@ -2,37 +2,147 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lib.util\n",
+    "import numpy as np\n",
+    "from transformers import GPT2Tokenizer\n",
+    "import torch\n",
+    "import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gym3 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (0.3.3)\n",
-      "Requirement already satisfied: imageio-ffmpeg<0.4.0,>=0.3.0 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from gym3) (0.3.0)\n",
-      "Requirement already satisfied: imageio<3.0.0,>=2.6.0 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from gym3) (2.22.4)\n",
-      "Requirement already satisfied: moderngl<6.0.0,>=5.5.4 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from gym3) (5.7.3)\n",
-      "Requirement already satisfied: glfw<2.0.0,>=1.8.6 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from gym3) (1.12.0)\n",
-      "Requirement already satisfied: numpy<2.0.0,>=1.11.0 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from gym3) (1.21.3)\n",
-      "Requirement already satisfied: cffi<2.0.0,>=1.13.0 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from gym3) (1.15.1)\n",
-      "Requirement already satisfied: pycparser in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from cffi<2.0.0,>=1.13.0->gym3) (2.21)\n",
-      "Requirement already satisfied: pillow>=8.3.2 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from imageio<3.0.0,>=2.6.0->gym3) (9.3.0)\n",
-      "Requirement already satisfied: glcontext<3,>=2.3.6 in /home/idmi/miniconda3/envs/minerl/lib/python3.8/site-packages (from moderngl<6.0.0,>=5.5.4->gym3) (2.3.7)\n"
+      "[2, 30086, 6, 141, 32, 47, 38, 524, 2051]\n",
+      "'</s>'\n",
+      "'Hi'\n",
+      "','\n",
+      "' how'\n",
+      "' are'\n",
+      "' you'\n",
+      "' I'\n",
+      "' am'\n",
+      "' fine'\n"
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "!pip install gym3\n",
-    "import lib.util"
+    "tokenizer = GPT2Tokenizer.from_pretrained(\"facebook/opt-350m\")\n",
+    "\n",
+    "tokens = tokenizer('Hi, how are you I am fine')['input_ids']\n",
+    "\n",
+    "print(tokens)\n",
+    "\n",
+    "for i in tokens:\n",
+    "    print(\"'\"+tokenizer.decode(i)+\"'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating dataset\n",
+      "18\n",
+      "shakespeare-hamlet.txt\n",
+      "tokenizing\n",
+      "51667\n",
+      "creatin batch 8 200\n",
+      "LM\n",
+      "tensor(4.6932, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "####### find best silence token - which token, when inserted randomly into text, preserves prediction performance best?\n",
+    "\n",
+    "from transformers import OPTForCausalLM\n",
+    "import random\n",
+    "import gc\n",
+    "model = OPTForCausalLM.from_pretrained(\"facebook/opt-350m\")\n",
+    "\n",
+    "\n",
+    "print('creating dataset')\n",
+    "import nltk\n",
+    "files = nltk.corpus.gutenberg.fileids()\n",
+    "from nltk.corpus import gutenberg\n",
+    "dataset = ''\n",
+    "\n",
+    "#random.shuffle(files)\n",
+    "#for file in files[0:10]:\n",
+    "#    doc = gutenberg.raw(file)[0:100000]\n",
+    "#    dataset+=doc\n",
+    "print(len(files))\n",
+    "dataset = gutenberg.raw(files[15]) # just use first jane austen book\n",
+    "print(files[15])\n",
+    "\n",
+    "print('tokenizing')\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained(\"facebook/opt-350m\")\n",
+    "token_ids = tokenizer(dataset)['input_ids']\n",
+    "del dataset\n",
+    "print(len(token_ids))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "SILENCE_TOKEN = 1437 #comma=6. newline character=50118. single space=1437   # run=422 : for stress test purposes\n",
+    "batch_size=8\n",
+    "num_tokens = 200\n",
+    "print(\"creatin batch\", batch_size, num_tokens)\n",
+    "LM_input = torch.zeros([batch_size,num_tokens], dtype=torch.long)\n",
+    "random.seed(1)\n",
+    "for b in range(batch_size):\n",
+    "\n",
+    "    # get random tokens from text\n",
+    "    start=random.randint(0,len(token_ids)-num_tokens)\n",
+    "    end=start+num_tokens\n",
+    "    LM_input[b,:] = torch.tensor(token_ids[start:end], dtype=torch.long)\n",
+    "\n",
+    "    # insert silence tokens\n",
+    "    for t in range(num_tokens-2): # leave last two tokens for prediction\n",
+    "        if random.random() < 0.1: #0.059885932\n",
+    "            LM_input[b,t:num_tokens].roll(1)\n",
+    "            LM_input[b,t] = SILENCE_TOKEN\n",
+    "            pass\n",
+    "\n",
+    "LM_input[:,0]=2\n",
+    "\n",
+    "print(\"LM\")\n",
+    "labels = torch.full(LM_input.shape, -100, dtype=torch.long)\n",
+    "labels[:,num_tokens-2] = LM_input[:,num_tokens-1]\n",
+    "\n",
+    "output = model(input_ids=LM_input, labels=LM_input)\n",
+    "\n",
+    "print(output.loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test gated cross attention\n",
     "# make module\n",
     "\n",
     "from lib.masked_attention import MaskedAttention\n",
@@ -53,26 +163,8 @@
     "        init_scale=1,\n",
     "        norm=\"none\",\n",
     "        log_scope=\"sa\",\n",
-    "        use_muP_factor=False)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(-0.0003)\n",
-      "torch.Size([1000, 1, 1, 16, 16])\n",
-      "tensor(0.0007)\n"
-     ]
-    }
-   ],
-   "source": [
+    "        use_muP_factor=False) \n",
+    "\n",
     "# put matrix through module\n",
     "\n",
     "import torch as th\n",
@@ -81,59 +173,44 @@
     "print(array.mean())\n",
     "array2 = array[:,0,None,None]\n",
     "print(array2.shape)\n",
-    "print(array2.mean())\n"
+    "print(array2.mean())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input_ids': [[2, 250, 395, 1559, 284, 2625, 34, 56, 127, 1508, 8401, 853, 4506, 81, 23, 173, 4, 2064, 27024, 30, 5, 804, 177, 30689, 459, 36, 5488, 16, 4206, 741, 17137, 43, 50118, 50118, 1106, 5, 1086, 9, 5, 987, 21, 702, 155, 111, 195, 2397, 9, 5, 22845, 7, 65, 2214, 6, 99, 2214, 74, 28, 12461, 28286, 5, 144, 116, 50118, 50118, 100, 3811, 11, 5976, 9, 5, 20, 15227, 4177, 293, 17, 27, 5835, 1273, 31457, 11, 9631, 179, 17, 27, 32190, 6, 13, 162, 6, 24, 17, 27, 29, 95, 4940, 26865, 4]], 'attention_mask': [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from transformers import GPT2Tokenizer\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained('facebook/opt-350m')\n",
+    "# test token timings and how often silence occurs\n",
+    "import numpy as np\n",
+    "import random\n",
     "\n",
-    "input_string = [\"\"\"A Sunday evening family debate has had my mind whirring over at work. Spurred by the online game Heardle (which is excellent btw)\n",
+    "result = 0\n",
+    "for i in range(500):\n",
+    "    prob_word = 0.1666666666\n",
+    "    d=10\n",
+    "    total = 0\n",
+    "    num_shown = 0\n",
+    "    skipped=0\n",
     "\n",
-    "If the whole of the UK was played 3 - 5 seconds of the intro to one song, what song would be correctly guessed the most?\n",
+    "    random_seq = []\n",
+    "    for i in range(2048):\n",
+    "        #random_seq.append(random.gauss(0.5,0.335)<prob_word)   #  np.random.uniform(0,1,2048)\n",
+    "        random_seq.append(random.random()<prob_word)   #  np.random.uniform(0,1,2048)\n",
+    "        \n",
     "\n",
-    "I argued in favour of the The Bee Gees’ stunning opening riff in Stayin’ Alive, for me, it’s just totally unforgettable.\"\"\"]\n",
+    "    for i in range(2048):\n",
     "\n",
-    "input_ids = tokenizer(input_string)\n",
+    "        if i%d==0 and i>0:\n",
+    "            token=np.max(random_seq[i-d:i])\n",
+    "            if (token < np.sum(random_seq[i-d:i])):\n",
+    "                skipped+=1\n",
+    "            total+=token\n",
+    "            num_shown += 1 #for every group checked only output 1\n",
     "\n",
-    "print(input_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input_ids': [2, 43, 50118, 50118, 1106], 'attention_mask': [1, 1, 1, 1, 1]}\n",
-      "{'input_ids': [2, 100, 236, 7, 1437, 3529, 127, 14678], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_ids = tokenizer(\"\"\")\n",
-    "\n",
-    "If\"\"\")\n",
-    "print(input_ids)\n",
-    "\n",
-    "input_ids = tokenizer(\"I want to  eat my bicycle\")\n",
-    "print(input_ids)"
+    "    result+=total/num_shown\n"
    ]
   }
  ],
@@ -153,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
