--- a/VLPT/requirements.ipynb
+++ b/VLPT/requirements.ipynb
@@ -17,8 +17,7 @@
     "    #language prerequisites \n",
     "    !conda install cudatoolkit=11.3\n",
     "    !pip install transformers\n",
-    "\n",
-    "\n"
+    "    !pip install 'git+https://github.com/katsura-jp/pytorch-cosine-annealing-with-warmup'"
    ]
   },
   {
@@ -38,7 +37,7 @@
     "\n",
     "    utilities_name = 'modeling_transfo_xl_utilities.py'\n",
     "    os.rename(transfo_xl_dir+utilities_name , transfo_xl_dir+utilities_name+'.bak')\n",
-    "    os.system( 'cp '+utilities_name +' '+ transfo_xl_dir+utilities_name)\n"
+    "    os.system( 'cp '+utilities_name +' '+ transfo_xl_dir+utilities_name)"
    ]
   }
  ],
@@ -58,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
