--- a/Data Gathering/video spamham labeller.ipynb
+++ b/Data Gathering/video spamham labeller.ipynb
@@ -27,10 +27,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "minerl",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "44f58b348a4d2991bb9cc32651780e86abd4fe788463c217caf1a9850410ed63"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
