--- a/VLPT/requirements.ipynb
+++ b/VLPT/requirements.ipynb
@@ -17,7 +17,11 @@
     "    #language prerequisites \n",
     "    !conda install cudatoolkit=11.3\n",
     "    !pip install transformers\n",
-    "    !pip install 'git+https://github.com/katsura-jp/pytorch-cosine-annealing-with-warmup'"
+    "    !pip install 'git+https://github.com/katsura-jp/pytorch-cosine-annealing-with-warmup'\n",
+    "\n",
+    "    !pip install git+https://github.com/jianfch/stable-ts.git\n",
+    "    !pip install -U openai-whisper\n",
+    "    !sudo apt update && sudo apt install ffmpeg"
    ]
   },
   {
@@ -26,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modify_python = True\n",
+    "modify_python = False\n",
     "if modify_python:\n",
     "\n",
     "    transfo_xl_dir = sys.exec_prefix + \"/lib/python3.8/site-packages/transformers/models/transfo_xl/\"\n",
@@ -57,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
