Work on dataset  collection. Optimising training.

--- a/Data Gathering/classifier_train.ipynb
+++ b/Data Gathering/classifier_train.ipynb
@@ -6,6 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### LOAD CLIP\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "import torch as th\n",
+    "device = \"cuda\" if th.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load(\"RN50x64\", device=device)\n",
+    "image = preprocess(Image.open(\"CLIP.png\")).unsqueeze(0).to(device)\n",
+    "with th.no_grad():\n",
+    "    image_features = model.encode_image(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### LOAD SVM\n",
+    "\n",
+    "from sklearn import svm\n",
+    "frame_classifier = svm.SVC(kernel='rbf', gamma='scale', C=20)\n",
+    " \n",
     "\n",
     "# create GUI window to show an image\n",
     "\n",
