--- a/Data Gathering/clean_link_finder.ipynb
+++ b/Data Gathering/clean_link_finder.ipynb
@@ -37,7 +37,8 @@
    "source": [
     "import yt_dlp\n",
     "import matplotlib\n",
-    "from yt_dlp import YoutubeDL"
+    "from yt_dlp import YoutubeDL\n",
+    "import torch as th"
    ]
   },
   {
@@ -103,39 +104,30 @@
     "all_MC_videos = []\n",
     "blacklist=[]\n",
     "\n",
-    "for search_query in search_queries:\n",
+    "YDL_OPTIONS = {'noplaylist':'True', 'Download':\"False\", 'ignoreerrors': 'True'}\n",
+    "with YoutubeDL(YDL_OPTIONS) as ydl:\n",
+    "    for search_query in search_queries:\n",
     "\n",
-    "    YDL_OPTIONS = {'noplaylist':'True', 'Download':\"False\", 'ignoreerrors': 'True'}\n",
+    "        # get top search results for query, add results to top_MC_videos[]\n",
+    "        search_results = ydl.extract_info(f\"ytsearchall:{search_query}\", download=False)\n",
+    "        for result in search_results['entries']:\n",
+    "            print()\n",
+    "            top_MC_videos.append(result)\n",
     "\n",
-    "    # ge top search results for query, add results to top_MC_videos[]\n",
-    "    with YoutubeDL(YDL_OPTIONS) as ydl:\n",
-    "        search_results = ydl.extract_info(f\"ytsearchall:{search_query}\", download=False)['entries']\n",
-    "\n",
-    "\n",
-    "    # get channels from top search results for query, add results to MC_channels[]\n",
-    "    for link in top_MC_videos:\n",
-    "        with YoutubeDL(YDL_OPTIONS) as ydl:\n",
-    "            channel = ydl.extract_info(link, download=False)['channel']\n",
-    "        \n",
-    "        if not (channel in MC_channels):\n",
-    "            MC_channels.append(channel)\n",
+    "        # get channels from top search results for query, add results to MC_channels[]\n",
+    "        for link in top_MC_videos:\n",
+    "            channel = result['channel'] #ydl.extract_info(result['SiD'], download=False)['channel']\n",
+    "            if not (channel in MC_channels):\n",
+    "                MC_channels.append(channel)\n",
     "\n",
     "\n",
-    "    # get videos from collected channels, check if minecraft related and save\n",
-    "    for channel in MC_channels:\n",
-    "        with YoutubeDL(YDL_OPTIONS) as ydl:\n",
-    "            \n",
-    "            channel = ydl.extract_info(link, download=False)['channel']\n",
-    "        \n",
-    "            videos = ydl.extract_info(f'https://www.youtube.com/channel/{channel}/videos')\n",
-    "\n",
-    "            for video in videos:\n",
+    "        # get videos from collected channels, check if minecraft related and save\n",
+    "        for channel in MC_channels:\n",
+    "            channel_videos = ydl.extract_info(f'https://www.youtube.com/channel/{channel}/videos')\n",
+    "            for video in channel_videos:\n",
     "                title = video.title\n",
-    "                if         bool(set(title.split(' '))&set(['tutorial', 'minecraft', 'MC', 'guide']))           and not       bool(set(title.split(' '))&set(['creative', 'server', 'multiplayer', 'friend'])):\n",
-    "                    all_MC_videos.append(video.link)\n",
-    "\n",
-    "        if not (channel in MC_channels):\n",
-    "            MC_channels.append(channel)\n",
+    "                if not (video in all_MC_videos) and title.lower().find('minecraft') > -1:\n",
+    "                    all_MC_videos.append(video)\n",
     "\n",
     "\n"
    ]
@@ -164,57 +156,58 @@
     "\n",
     "clean_metadata_links = []\n",
     "\n",
-    "with ydl as YoutubeSearch:\n",
-    "    for link in all_MC_videos:\n",
-    "        spam=False\n",
+    "for video in all_MC_videos:\n",
+    "    spam=False\n",
     "\n",
-    "        # CHECK VIDEO >= 10 mins\n",
-    "        if video['duration'] < 10:\n",
-    "            spam=True\n",
-    "            print(title, 'spam=',spam)\n",
+    "    # CHECK that video is >= 10 mins\n",
+    "    if video['duration'] < 10:\n",
+    "        spam=True\n",
+    "        print(video['id'], 'spam=',spam)\n",
     "\n",
-    "        # CHECK TITLE AGAINST REGEX\n",
-    "        if not spam:\n",
-    "            title = link.title\n",
-    "            for term in exclusion_terms:\n",
-    "                if term in title:\n",
+    "    # CHECK TITLE AGAINST REGEX\n",
+    "    if not spam:\n",
+    "        title = video['title']\n",
+    "        for term in exclusion_terms:\n",
+    "            if term.lower() in title.lower():\n",
+    "                spam = True\n",
+    "        for term in title_inclusion_terms:\n",
+    "            for subterm in term:\n",
+    "                if not subterm.lower() in title.lower():\n",
     "                    spam = True\n",
-    "            for term in title_inclusion_terms:\n",
-    "                for subterm in term:\n",
-    "                    if not subterm in title:\n",
-    "                        spam = True\n",
-    "                print(title, 'spam=',spam)\n",
+    "            print(video['id'], 'spam=',spam)\n",
     "\n",
-    "        # CHECK TAGS AGAINST SPAM TAGS (remove ps3/xbox/console/bedrock/ps4/ps5/xbox series...\n",
-    "        if not spam:\n",
-    "            tags = link.tags\n",
-    "            for term in exclusion_terms:\n",
-    "                if term in tags:\n",
-    "                    spam=True\n",
-    "            print(tags, 'spam=',spam)\n",
+    "    # CHECK TAGS AGAINST SPAM TAGS (remove ps3/xbox/console/bedrock/ps4/ps5/xbox series...\n",
+    "    if not spam:\n",
+    "        tags = video['tags']\n",
+    "        for term in exclusion_terms:\n",
+    "            if term in tags:\n",
+    "                spam=True\n",
+    "        print(tags, 'spam=',spam)\n",
     "\n",
-    "        # check transcript LANGAUGE and WPM\n",
-    "        if not spam:\n",
-    "            language = link.language\n",
+    "    # check transcript LANGAUGE and WPM\n",
+    "    if not spam:\n",
+    "        try:\n",
+    "            with YoutubeDL({\"list-subs\"}) as ydl:\n",
+    "                language = video.language\n",
     "            if language != 'english':\n",
     "                spam=True\n",
-    "            print(language, 'spam=',spam)\n",
-    "            \n",
-    "            # we dont want video with too high a WPM. LM can only fit so many words and we dont watn to use up all the context for a single minute of video. lower WPM also means we can use large D which lets LM see farther back in time. High WPM also may indicate multiplayer which is a very noisy langauge signal, especially since other person wont be seeing what is shown in the video, their langauge will be about something completely different.\n",
-    "            if link.hasTranscript:\n",
-    "\n",
-    "                transcript = link.transcript\n",
-    "                num_tokens = len(tokenizer(' '.join(transcript)))\n",
-    "                video_mins = link.get_time()\n",
-    "                WPM = num_tokens/video_mins     # WARNING: variable is called WPM as simplification, its actually tokens per minute\n",
-    "                if WPM<180 or WPM>280:\n",
-    "                    spam = True\n",
+    "        except:\n",
+    "            pass\n",
+    "        print(language, 'spam=',spam)\n",
     "        \n",
-    "        if not spam:\n",
-    "            clean_metadata_links.append(video)\n",
-    "        else:\n",
-    "            blacklist.append(video)\n",
-    " "
+    "        # Check WPM. we dont want video with too high a WPM. LM can only fit so many words and we dont watn to use up all the context for a single minute of video. lower WPM also means we can use large D which lets LM see farther back in time. High WPM also may indicate multiplayer which is a very noisy langauge signal, especially since other person wont be seeing what is shown in the video, their langauge will be about something completely different.\n",
+    "        if video.hasTranscript:\n",
+    "            transcript = video.transcript\n",
+    "            num_tokens = len(tokenizer(' '.join(transcript)))\n",
+    "            video_mins = video.get_time()\n",
+    "            WPM = num_tokens/video_mins     # WARNING: variable is called WPM as simplification, its actually tokens per minute\n",
+    "            if WPM<180 or WPM>280:\n",
+    "                spam = True\n",
+    "    \n",
+    "    if not spam:\n",
+    "        clean_metadata_links.append(video)\n",
+    "    else:\n",
+    "        blacklist.append(video)\n"
    ]
   },
   {
@@ -224,24 +217,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LOAD IMAGE SPAM/HAM CALSSIFIER\n",
-    "use the new OSS clip\n",
-    "\n",
+    "### LOAD IMAGE SPAM/HAM CALSSIFIER\n",
+    "# load CLIP\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "device = \"cuda\" if th.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load(\"RN50x64\", device=device)\n",
+    "with th.no_grad():\n",
+    "    image = preprocess(Image.open(\"CLIP.png\")).unsqueeze(0).to(device)\n",
+    "    image_features = model.encode_image(image)\n",
     "# LOAD SVM\n",
-    "Kernel rbf\n",
-    "C 20\n",
-    "Gamma scale\n",
-    "Sample Size\n",
-    "Class 1 2200\n",
-    "Class 2 2200\n",
-    "Class 3 440\n",
-    "\n",
-    "\n",
+    "from sklearn import svm\n",
     "classifier = \n",
     "\n",
-    "\n",
-    "\n",
-    "# load audio spamham detector\n",
+    "### LOAD AUDIO TRANSCRIBER\n",
+    "from stable_whisper import load_model\n",
+    "from stable_whisper import stabilize_timestamps\n",
     "model = load_model('base')"
    ]
   },
