--- a/Data Gathering/video_audio_scraper.ipynb
+++ b/Data Gathering/video_audio_scraper.ipynb
@@ -37,7 +37,8 @@
    "source": [
     "import yt_dlp\n",
     "import matplotlib\n",
-    "from yt_dlp import YoutubeDL"
+    "from yt_dlp import YoutubeDL\n",
+    "import os"
    ]
   },
   {
@@ -47,7 +48,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load clean links from file"
+    "# load clean links from file\n",
+    "clean_links = []\n",
+    "with open('clean_links') as file:\n",
+    "    link = file.readline()\n",
+    "    clean_links.append(link)"
    ]
   },
   {
@@ -57,7 +62,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for every link: [use YT-DLP script to donwload video at correct resolution adn ffmpeg to scale] []\n"
+    "# for every link: [use YT-DLP script to donwload video at correct resolution adn ffmpeg to scale] []\n",
+    "for link in clean_links:\n",
+    "\n",
+    "    full_link = str(\"https://www.youtube.com/watch?v=%s\"%video_link)\n",
+    "\n",
+    "\n",
+    "    #get adio 192kbps\n",
+    "    audio_output_filename = '/DATASET/all/transcription/'+link+'_audio.mp3'\n",
+    "    yt_dlp(link -x '' -o audio_output_filename)\n",
+    "    \n",
+    "\n",
+    "    #get video 360p\n",
+    "    video_output_filename = '/DATASET/all/frames/'+link+'_audio.webm'\n",
+    "    os.system('yt-dlp -F -S res:360,ext:mp4,fps:24 --recode mp4 '+link+' -o'+video_output_filename)\n",
+    "    "
    ]
   }
  ],
