--- a/VLPT/requirements.ipynb
+++ b/VLPT/requirements.ipynb
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modify_python = False\n",
-    "if modify_python:\n",
+    "modify_transfo_xl_files = False\n",
+    "if modify_transfo_xl_files:\n",
     "\n",
     "    transfo_xl_dir = sys.exec_prefix + \"/lib/python3.8/site-packages/transformers/models/transfo_xl/\"\n",
     "\n",
